@@ -1,3 +1,12 @@
+2006-01-25  Christian Persch  <chpe@cvs.gnome.org>
+
+	* src/bookmarks/ephy-bookmark-properties.c:
+	(title_entry_changed_cb), (ephy_bookmark_properties_constructor):
+	* src/bookmarks/ephy-bookmarks-ui.c:
+	(ephy_bookmarks_ui_add_bookmark):
+
+	Don't use favicon as window icon.
+
 2006-01-24  Christian Persch  <chpe@cvs.gnome.org>
 
 	* src/bookmarks/ephy-bookmark-properties.c:
